# Physical-AI-Humanoid-Robotics-Textbook

./: .env  .gitignore  AGENTS.md  README.md  project_context.md  skills-lock.json
.claude/: agent.md
backend/: agent.py  config.py  pyproject.toml
ingestion/: e2e_test.py  requirements.txt  test_ingest_book.py
my-website/: docusaurus.config.ts  package-lock.json  package.json
my_project/: .env.example  (+2 more)
my_project/backend/: .dockerignore  Dockerfile  agent.py  app.py  chatkit_server.py  config.py  pyproject.toml  retrieval.py  store.py
my_project/backend/docs/: api.md
my_project/backend/models/: chat.py
my_project/backend/scripts/: read_db.py
my_project/backend/tests/: conftest.py  test_agent.py  test_agent_instructions.py  test_agent_integration.py  test_agent_v2.py  test_app.py  test_chat_endpoint.py  test_chatkit_protocol.py  test_chatkit_server.py  test_config.py  test_guardrail.py  test_middleware.py  test_models.py  test_performance.py  test_retrieval.py  test_store.py  test_streaming.py  test_validation.py
my_project/backend/utils/: validation.py
my_project/ingestion/: chunking.py  cli.py  config.py  embedding.py  ingest_book.py  mdx_utils.py  models.py  pipeline.py  progress.py  pyproject.toml  qdrant_store.py  requirements.txt  retry.py
my_project/ingestion/tests/: conftest.py  test_chunking.py  test_cli_validation.py  test_e2e.py  test_embedding.py  test_file_operations.py  test_main_pipeline.py  test_mdx_conversion.py  test_path_utils.py  test_progress_tracker.py  test_qdrant_operations.py  test_retry_utils.py  test_vector_record.py
(+151 files in other folders)
