[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.0",
    "fastapi[standard]>=0.124.4",
    "openai-agents>=0.6.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
