[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "cohere>=7.0.4",
    "fastapi[standard]>=0.137.2",
    "numpy>=2.4.6",
    "openai-agents>=0.17.5",
    "openai-chatkit>=1.6.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
