[project]
name = "ingestion"
version = "0.1.0"
description = "MDX to Cohere embeddings to Qdrant ingestion pipeline"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "cohere>=7.0.4",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
